refactorización a la api e integración de Notificación por discord